arreglando body de mercancia y posteriores

--- a/src/components/css/Mercancia.css
+++ b/src/components/css/Mercancia.css
@@ -5,7 +5,14 @@
 }
 
 body{
+    background-color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    position: relative;
+    min-height: 100vh;
 
+}
+
+.simula-body-merc{
         background-color: #fce8e8;
         font-family: 'Poppins', sans-serif;
         display: flex;
@@ -14,9 +21,7 @@ body{
         height: 10vh;
         margin: 0;
         width: 100%;
-    
-
-}
+    }
 
 body a{
     color: white;
