--- a/src/components/css/Mercancia.css
+++ b/src/components/css/Mercancia.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
     font-family: 'Poppins', sans-serif;
     position: relative;
     min-height: 100vh;
