--- a/src/components/css/Mercancia.css
+++ b/src/components/css/Mercancia.css
@@ -13,7 +13,7 @@ body{
 }
 
 .simula-body-merc{
-        background-color: red;
+        background-color: #fce8e8;
         font-family: 'Poppins', sans-serif;
         display: flex;
         align-items: center;
@@ -645,7 +645,7 @@ margin: 10px 11px 15px 0;
 }
 
 body{
-    background-color: #ffffff;
+    background-color:#fce8e8;
     font-family: 'Poppins', sans-serif;
     position: relative;
     min-height: 100vh;
